force-app/main/default/objects/FormerPosition__c/FormerPosition__c.object-meta.xml
<CustomObject>
    <description>Designed to track and record the previous employment history or roles of individuals in the Salesforce database.</description>
    <label>Former Position</label>
    <nameField>
        <displayFormat>FP-{0000000}</displayFormat>
        <label>Former Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Former Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>