force-app/main/default/objects/FormerPosition__c/fields/AccountRef__c.field-meta.xml
<CustomField>
    <fullName>AccountRef__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The organization where the contact is presently working or has worked before.</description>
    <inlineHelpText>The organization where the contact is presently working or has worked before.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Former Positions</relationshipLabel>
    <relationshipName>FormerPositions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>