force-app/main/default/objects/FormerPosition__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Field to provide extra context about the former position.</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>