force-app/main/default/objects/FormerPosition__c/fields/ContactRef__c.field-meta.xml
<CustomField>
    <fullName>ContactRef__c</fullName>
    <description>The latest entry in the contact data that is associated with all previous positions within the organization.</description>
    <inlineHelpText>The latest entry in the contact data that is associated with all previous positions within the organization.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Former Positions</relationshipLabel>
    <relationshipName>FormerPositions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>