force-app/main/default/objects/FormerPosition__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>When did the contact stopped working within this postion?</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>