force-app/main/default/objects/FormerPosition__c/fields/OldContactRef__c.field-meta.xml
<CustomField>
    <fullName>OldContactRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The old contact related to that postion.</description>
    <inlineHelpText>The old contact related to that postion.</inlineHelpText>
    <label>Old Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Former Positions (Old Contact)</relationshipLabel>
    <relationshipName>Former_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>