force-app/main/default/objects/FormerPosition__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>When the the contact start working at this position?</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>