force-app/main/default/objects/FormerPosition__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the contact within that position.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>